Fixed annoying CSS bug where saved block description would be cut off and you couldn't scroll to see more

--- a/front-end/src/styles/app.scss
+++ b/front-end/src/styles/app.scss
@@ -312,6 +312,7 @@ $content-sidebar-width: 92px;
   &__content {
     margin-left: 8px;
     width: 100%;
+    max-width: 410px;
   }
 
   &__image {
